fix z-index

--- a/cxx-top-front/client/page/home/style.scss
+++ b/cxx-top-front/client/page/home/style.scss
@@ -25,7 +25,7 @@
   }
 
   .swiper-slide-active {
-    z-index: 1;
+    z-index: 3;
     opacity: 1!important;
   }
 
